index html commit

--- a/urlShort/src/main/resources/templates/index.html
+++ b/urlShort/src/main/resources/templates/index.html
@@ -89,7 +89,7 @@
 				const para = document.createElement("p");
 				para.innerText = "The URL was shortened for every "+resultUrl.urlShorten +" seconds";
 				const formDiv = document.getElementsByClassName('convert-div');
-				document.getElementById("convert-div").insertAdjacentHTML("afterend","<h3>This is the text which has been inserted by JS</h3>"+resultUrl.urlShorten);
+				document.getElementById("convert-div").insertAdjacentHTML("afterend","<h3>URl is converted for every</h3>"+resultUrl.urlShorten);
 				
 
 		});
